src/objects/ffbf__BankFormatMappingField__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatMappingRecordType__c</fullName>
        <label>Bank Format Mapping Record Type</label>
        <referenceTo>ffbf__BankFormatMappingRecordType__c</referenceTo>
        <relationshipLabel>Bank Format Mapping Fields</relationshipLabel>
        <relationshipName>BankFormatMappingFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__BankFormatRecordSourceField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Format Record Source Field</label>
        <referenceTo>ffbf__BankFormatDefinitionField__c</referenceTo>
        <relationshipName>BankFormatRecordFieldMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__FieldExternalId__c</fullName>
        <formula>ffbf__BankFormatMappingRecordType__r.ffbf__RecordTypeExternalId__c &amp; &quot;#&quot; &amp;  ffbf__BankFormatRecordSourceField__r.ffbf__ExternalId__c</formula>
        <label>Field External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__OutputSequenceField__c</fullName>
        <formula>ffbf__BankFormatRecordSourceField__r.ffbf__OutputSequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__SourceFieldPath__c</fullName>
        <label>Source Field Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__SourceField__c</fullName>
        <label>Source Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__SourceLiteralExt__c</fullName>
        <label>Source Literal</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__SourceLiteral__c</fullName>
        <label>Deprecated: Source Literal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__TargetFieldPath__c</fullName>
        <label>Target Field Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__TargetField__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__TargetObject__c</fullName>
        <defaultValue>&quot;ffbf__BankFormatDefinitionField__c&quot;</defaultValue>
        <label>Target Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bank Format Mapping Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Mapping Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>